generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// -----------------------------------------------------------------------------
// Enums
// -----------------------------------------------------------------------------

enum PropertyType {
  SINGLE_FAMILY
  MULTI_FAMILY
  DUPLEX
  TRIPLEX
  FOURPLEX
  CONDO
  TOWNHOUSE
  OTHER
}

enum LeaseStatus {
  PENDING
  ACTIVE
  EXPIRED
  TERMINATED
}

enum TransactionType {
  RENT_INCOME
  DEPOSIT_INCOME
  OTHER_INCOME
  EXPENSE
  REFUND
}

enum MaintenanceStatus {
  OPEN
  IN_PROGRESS
  CLOSED
  CANCELED
}

enum MaintenancePriority {
  LOW
  MEDIUM
  HIGH
  URGENT
}

// -----------------------------------------------------------------------------
// Models
// -----------------------------------------------------------------------------

model User {
  id           String     @id @default(cuid())
  email        String     @unique
  passwordHash String
  createdAt    DateTime   @default(now())
  updatedAt    DateTime   @updatedAt
  properties   Property[]
  tenants      Tenant[]
}

model Property {
  id                 String              @id @default(cuid())
  ownerId            String
  owner              User                @relation(fields: [ownerId], references: [id], onDelete: Cascade)
  name               String
  addressLine1       String
  addressLine2       String?
  city               String
  state              String              @db.VarChar(2)
  postalCode         String
  propertyType       PropertyType        @default(SINGLE_FAMILY)
  createdAt          DateTime            @default(now())
  updatedAt          DateTime            @updatedAt
  units              Unit[]
  transactions       Transaction[]
  maintenanceTickets MaintenanceTicket[]

  @@index([ownerId])
}

model Unit {
  id                 String              @id @default(cuid())
  propertyId         String
  property           Property            @relation(fields: [propertyId], references: [id], onDelete: Cascade)
  label              String
  bedrooms           Int                 @default(0)
  bathrooms          Decimal             @default(0) @db.Decimal(3, 1)
  squareFeet         Int?
  marketRent         Decimal             @default(0) @db.Decimal(12, 2)
  createdAt          DateTime            @default(now())
  updatedAt          DateTime            @updatedAt
  leases             Lease[]
  transactions       Transaction[]
  maintenanceTickets MaintenanceTicket[]

  @@index([propertyId])
}

model Tenant {
  id        String   @id @default(cuid())
  ownerId   String
  owner     User     @relation(fields: [ownerId], references: [id], onDelete: Cascade)
  firstName String
  lastName  String
  email     String
  phone     String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  leases    Lease[]

  @@index([ownerId])
  @@index([email])
}

model Lease {
  id              String        @id @default(cuid())
  unitId          String
  unit            Unit          @relation(fields: [unitId], references: [id], onDelete: Cascade)
  tenantId        String
  tenant          Tenant        @relation(fields: [tenantId], references: [id], onDelete: Cascade)
  startDate       DateTime
  endDate         DateTime
  monthlyRent     Decimal       @db.Decimal(12, 2)
  securityDeposit Decimal       @default(0) @db.Decimal(12, 2)
  status          LeaseStatus   @default(PENDING)
  documentLink    String?
  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt
  transactions    Transaction[]

  @@index([unitId])
  @@index([tenantId])
  @@index([status])
}

model Transaction {
  id          String          @id @default(cuid())
  propertyId  String
  property    Property        @relation(fields: [propertyId], references: [id], onDelete: Cascade)
  unitId      String?
  unit        Unit?           @relation(fields: [unitId], references: [id], onDelete: SetNull)
  leaseId     String?
  lease       Lease?          @relation(fields: [leaseId], references: [id], onDelete: SetNull)
  type        TransactionType
  category    String?
  amount      Decimal         @db.Decimal(12, 2)
  date        DateTime
  description String
  createdAt   DateTime        @default(now())
  updatedAt   DateTime        @updatedAt

  @@index([propertyId])
  @@index([date])
  @@index([type])
}

model MaintenanceTicket {
  id          String              @id @default(cuid())
  propertyId  String
  property    Property            @relation(fields: [propertyId], references: [id], onDelete: Cascade)
  unitId      String?
  unit        Unit?               @relation(fields: [unitId], references: [id], onDelete: SetNull)
  title       String
  description String
  status      MaintenanceStatus   @default(OPEN)
  priority    MaintenancePriority @default(MEDIUM)
  reportedAt  DateTime            @default(now())
  resolvedAt  DateTime?
  createdAt   DateTime            @default(now())
  updatedAt   DateTime            @updatedAt

  @@index([propertyId])
  @@index([status])
  @@index([priority])
}
